* Make select_regular() swap `TAG optimization RTL` and `CLASS optimization RTL` checks if `NATIVE_GEBCN` is false to give IE a performance boost. [Diego Perini, jddalton]

* Simplify `RE_SIMPLE_SELECTOR` removing checks for buggy API. [Diego Perini, jddalton]

* Make byClass(), byName(), and byTag() convert nodeLists to arrays to improve element access times. [jddalton]

* Avoid critical error in select_regular() if selector contains trailing commas like `div,`. [jddalton]

* Add check to `RE_BUGGY_QSA` for Opera not respecting `valign` attribute value insensitivity in HTML. [jddalton]

* Make compileSelector() add element node checks for selectors like `* + *` or `* ~ *`. [jddalton]

* Ensure select_regular() doesn't cache an optimized selector. [jddalton]

* Ensure the `selector` argument of select()/match() is not undefined/null. [jddalton]

* Update jQuery adapters to support the `header/footer` properties and make `:has`, `:first`, and `:last` work with non tagName selectors. [jddalton]

* Remove document check from `:lang` selector. [Diego Perini]

* Make `:contains`, `:not`, and `:lang` return an empty array if nothing is passed in their parenthesis (:lang(), :not("")) . [jddalton]

* Make select_regular() `ID optimization RTL` use `re_optimizeIdAtEnd`, replace overlooked `selector` variables with `normalized`, and ensure ID optimizations skip ID selectors with pseudos attached. [jddalton]

* Revert `lastNormalized` usage in match() because of issues when match() calls select(). [jddalton]

* Give compileSelector() ability to process custom code before and after the primary iterator via `header` and `footer` properties of the callbacks return object. [jddalton]

* Merge compileGroup() and compileSingle() into compileSelector(). [jddalton]

* Ensure `lastNormalized` isn't modifed by selector optimizations in select_regular(). [jddalton]
